<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:src="@drawable/img_book_nook_logo"
        android:contentDescription="@string/img_title_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <TextView
        android:id="@+id/txt_quick_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_quick_stats"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_quick_stats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/db_count_books"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/db_count_books"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/db_wishlist_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/db_wishlist_count"
            app:layout_constraintTop_toBottomOf="@id/db_count_books"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_settings"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/btn_my_library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_my_library"
        app:layout_constraintBottom_toTopOf="@id/btn_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_add_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add"
        app:layout_constraintBottom_toTopOf="@id/btn_my_library"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"/>

    <View
        android:id="@+id/spacer_fill"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_add_book"
        app:layout_constraintTop_toBottomOf="@id/layout_stats"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>